--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Assets\Scripts\Networking\MyPlayer.cs" />
     <Compile Include="Assets\Scripts\Units\Unit.cs" />
     <Compile Include="Assets\Scripts\Combat\HealthDisplay.cs" />
+    <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
+    <Compile Include="Assets\Scripts\Buildings\GameOverHandler.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll" />
