Resource Generation building

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\UI\FaceCamera.cs" />
     <Compile Include="Assets\Scripts\Combat\HealthDisplay.cs" />
     <Compile Include="Assets\Scripts\Combat\Targeter.cs" />
+    <Compile Include="Assets\Scripts\Buildings\BuildingButton.cs" />
     <Compile Include="Assets\Scripts\Networking\MyNetworkManager.cs" />
     <Compile Include="Assets\Scripts\Units\UnitMovement.cs" />
     <Compile Include="Assets\Scripts\Buildings\UnitSpawner.cs" />
@@ -74,7 +75,8 @@
     <Compile Include="Assets\Scripts\Networking\MyPlayer.cs" />
     <Compile Include="Assets\Scripts\Units\Unit.cs" />
     <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
-    <Compile Include="Assets\Scripts\Buildings\BuildingButton.cs" />
+    <Compile Include="Assets\Scripts\UI\ResourcesDisplay.cs" />
+    <Compile Include="Assets\Scripts\Buildings\ResourceGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll" />
