--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\Units\Unit.cs" />
     <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
     <Compile Include="Assets\Scripts\UI\ResourcesDisplay.cs" />
+    <Compile Include="Assets\Scripts\Networking\TeamColorSetter.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll" />
