--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
     <Compile Include="Assets\Scripts\UI\ResourcesDisplay.cs" />
     <Compile Include="Assets\Scripts\Networking\TeamColorSetter.cs" />
+    <Compile Include="Assets\Scripts\Inputs\Controls.cs" />
+    <Compile Include="Assets\Scripts\Inputs\CameraController.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll" />
