--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,11 +76,14 @@
     <Compile Include="Assets\Scripts\Buildings\GameOverHandler.cs" />
     <Compile Include="Assets\Scripts\Buildings\Building.cs" />
     <Compile Include="Assets\Scripts\Networking\MyPlayer.cs" />
+    <Compile Include="Assets\Scripts\Inputs\MiniMap.cs" />
     <Compile Include="Assets\Scripts\Units\Unit.cs" />
     <Compile Include="Assets\Scripts\Inputs\CameraController.cs" />
     <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
     <Compile Include="Assets\Scripts\UI\ResourcesDisplay.cs" />
-    <Compile Include="Assets\Scripts\Inputs\MiniMap.cs" />
+    <Compile Include="Assets\Scripts\UI\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\UI\JoinLobbyMenu.cs" />
+    <Compile Include="Assets\Scripts\UI\LobbyMenu.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll" />
