--- a/kcp2k.csproj
+++ b/kcp2k.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{D2F7BA44-C6A6-3F29-A685-28AF56991672}</ProjectGuid>
+    <ProjectGuid>{F96F504A-C06B-EF29-443F-AE801EF94EFD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Mirror.Examples</AssemblyName>
+    <AssemblyName>kcp2k</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -26,7 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -35,7 +35,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <NoConfig>true</NoConfig>
@@ -56,44 +56,19 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\RandomColor.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\Spawner.cs" />
-    <Compile Include="Assets\Mirror\Examples\AdditiveScenes\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\PhysicsCollision.cs" />
-    <Compile Include="Assets\Mirror\Examples\Chat\Scripts\ChatWindow.cs" />
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\NetworkRoomPlayerExt.cs" />
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\Spawner.cs" />
-    <Compile Include="Assets\Mirror\Examples\AdditiveScenes\Scripts\RandomColor.cs" />
-    <Compile Include="Assets\Mirror\Examples\Benchmark\Scripts\BenchmarkNetworkManager.cs" />
-    <Compile Include="Assets\Mirror\Examples\Benchmark\Scripts\MonsterMovement.cs" />
-    <Compile Include="Assets\Mirror\Examples\AdditiveScenes\Scripts\ZoneHandler.cs" />
-    <Compile Include="Assets\Mirror\Examples\Tanks\Scripts\Tank.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Mirror\Examples\Pong\Scripts\Ball.cs" />
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\Reward.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\RandomColor.cs" />
-    <Compile Include="Assets\Mirror\Examples\Chat\Scripts\ChatNetworkManager.cs" />
-    <Compile Include="Assets\Mirror\Examples\AdditiveScenes\Scripts\AdditiveNetworkManager.cs" />
-    <Compile Include="Assets\Mirror\Examples\Basic\Scripts\Player.cs" />
-    <Compile Include="Assets\Mirror\Examples\Pong\Scripts\NetworkManagerPong.cs" />
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\NetworkRoomManagerExt.cs" />
-    <Compile Include="Assets\Mirror\Examples\AdditiveScenes\Scripts\ShootingTankBehaviour.cs" />
-    <Compile Include="Assets\Mirror\Examples\Benchmark\Scripts\PlayerMovement.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\PhysicsSimulator.cs" />
-    <Compile Include="Assets\Mirror\Examples\Chat\Scripts\Player.cs" />
-    <Compile Include="Assets\Mirror\Examples\Pong\Scripts\Player.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\MultiSceneNetManager.cs" />
-    <Compile Include="Assets\Mirror\Examples\Room\Scripts\PlayerScore.cs" />
-    <Compile Include="Assets\Mirror\Examples\Tanks\Scripts\Projectile.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\Reward.cs" />
-    <Compile Include="Assets\Mirror\Examples\MultipleAdditiveScenes\Scripts\PlayerScore.cs" />
-    <Compile Include="Assets\Mirror\Examples\Basic\Scripts\BasicNetManager.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\highlevel\KcpClient.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\highlevel\KcpClientConnection.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\highlevel\KcpConnection.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\kcp\Utils.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\kcp\AssemblyInfo.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\kcp\Segment.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\highlevel\KcpServer.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\kcp\Kcp.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\highlevel\KcpServerConnection.cs" />
+    <Compile Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\highlevel\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
-     <None Include="Assets\Mirror\Examples\Tanks\Textures\(Public Domain) Dirt Hand Painted Texture\Dirt Hand Painted Texture - License.txt" />
-     <None Include="Assets\Mirror\Examples\Tanks\Models\(Public Domain) Recon_Tank\Recon_Tank - License.txt" />
-     <None Include="Assets\Mirror\Examples\Mirror.Examples.asmdef" />
+     <None Include="Assets\Mirror\Runtime\Transport\KCP\kcp2k\kcp2k.asmdef" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.1.10f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -669,14 +644,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Mirror.csproj">
-      <Project>{2DEB2479-2215-6EDF-E1FE-A77B4E19C8F3}</Project>
-      <Name>Mirror</Name>
-    </ProjectReference>
-    <ProjectReference Include="Mirror.Components.csproj">
-      <Project>{3746B5F6-4AF8-8FB4-C39F-0FBB36A71ED0}</Project>
-      <Name>Mirror.Components</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
